--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -71,6 +71,7 @@ sass/
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/about';
+@import 'layout/front-latest';
 
 //Pages
 @import 'pages/about-us';
