--- a/themes/daria-day/sass/abstracts/_variables.scss
+++ b/themes/daria-day/sass/abstracts/_variables.scss
@@ -1,7 +1,8 @@
 // Media widths
 $tablet: 600px;
-$larger-tablet: 900px;
+$larger-tablet: 850px;
 $desktop: 1024px;
+$larger-desktop: 1420px;
 
 // Dimensions
 $mobile-nav-height: 54px;
