--- a/themes/daria-day/sass/layout/_footer.scss
+++ b/themes/daria-day/sass/layout/_footer.scss
@@ -30,11 +30,18 @@
     }
 }
 #darialogo{
-  background-image:url('../../images/DariaDay_logo-02 white.svg') ;
-  background-repeat: no-repeat;
-  background-size: 125px 175px;
+  img {
+    width: 200px;
+  }
+  // background-image:url('../../images/DariaDay_logo-02 white.svg') ;
+  // background-repeat: no-repeat;
+  // background-size: 125px 175px;
 }
 
+
+#hi {
+  // background-color: black;
+}
 
 @media screen and (min-width: 1024px) {
   .footer {
