--- a/themes/daria-day/sass/pages/_shop-all.scss
+++ b/themes/daria-day/sass/pages/_shop-all.scss
@@ -4,11 +4,46 @@ General Products Styling
 =========================
 */
 
+.shop-hero {
+  background: url('../../images/home-hero.png') no-repeat center;
+  background-size: cover;
+  background-position: 70%;
+  height: 50vh;
+
+  .content-wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+
+    height: 100%;
+    padding: 0 $find-gemstone-base-spacing * 3;
+    
+    color: $brand-colour-evergreen;
+    text-align: center;
+    
+    h1 {
+      font-size: 2.5em;
+    }
+
+    p {
+      font-family: 'Avenir LT Std', sans-serif;
+      font-size: 1.25em;
+    }
+  }
+}
+
+@media screen and (min-width: $larger-tablet) {
+  .shop-hero {
+    height: 35vh;
+  }
+}
+
 .shop-all.two-column-shop {
   display: grid;
   grid-template-columns: 1fr 2fr;
-}
 
+  padding: $base-spacing * 2 $base-spacing * 3;
+}
 
 /*
 =========================
@@ -53,7 +88,8 @@ Filter Products Styling
       
       display: none;
 
-      padding: $base-spacing;
+      width: 100%;
+      padding: $base-spacing $base-spacing;
 
       background-color: #fff;
       border: 1px solid $brand-colour-bright-green;
@@ -216,6 +252,7 @@ Filter Products Styling
   .products-filter-section {
     display: block;
 
+    margin-right: $base-spacing * 2;
     padding: $base-spacing 0;
 
     .sort-by {
